fix: server config